# grubswitch

./: 49_switch  CMakeLists.txt  LICENSE  README.md
case/: grubswitch.f3d  grubswitch_body.stl  grubswitch_lid.stl
src/: main.c  msc_disk.c  msc_disk.h  tusb_config.h  usb_descriptors.c
